Hide Preview menu on small viewports and fix regression for FSE preview (#24537)
* hide preview menu on small viewports and fix regression for FSE preview

* hide Preview menu on mobile - React based

--- a/packages/edit-post/src/components/header/style.scss
+++ b/packages/edit-post/src/components/header/style.scss
@@ -57,14 +57,6 @@
 
 	@include break-small () {
 		padding-right: $grid-unit-20;
-
-		.editor-post-preview {
-			display: none;
-		}
-
-		.block-editor-post-preview__dropdown {
-			display: flex;
-		}
 	}
 }
 
